crates/solidity/testing/snapshots/bindings_output/expressions/revert_named_args/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:18]
   │
 2 │ ╭─▶     error Failure(
   ┆ ┆   
 5 │ ├─▶     );
   │ │            
   │ ╰──────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:8:23]
   │
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │                       ─────────────────┬─────────────────  
   │                                        ╰─────────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     error Failure(
   │     ──┬── ───┬───  
   │       ╰──────────── unresolved
   │              │     
   │              ╰───── def: 2
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── def: 3
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │         ───┬── ───┬───  
   │            ╰──────────── unresolved
   │                   │     
   │                   ╰───── def: 4
───╯
